# Dota2-reviews-search

./: .gitignore  Dockerfile  README.md  Taskfile.yaml  config.py  docker-compose.yml  pyproject.toml  requirements.txt
adapters/: base.py  file_adapter.py
api/: main.py
database/: client.py  collections.py  operations.py
parser/: parser.py
scripts/: ingest_data.py  run_benchmark.py
src/adapters/: file_adapter.py  model_adapter.py
src/api/: main.py  schemas.py
src/core/: config.py
src/database/: client.py  collections.py  operations.py
src/evaluation/: evaluate_run.py  evaluator.py  generate_run.py  spot_check.py  spot_check_comparison.py  tune_alpha.py
src/parser/: generate_embeddings.py
src/pipeline/: embed.py  fetch.py  filter.py  generate_validation_set.py
src/scripts/: ingest_data.py  run_benchmark.py
src/utils/: io.py  reproducibility.py
