[project]
name = "dota2-reviews-search"
version = "0.1.0"
description = "DLS Project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.14.0",
    "aiohttp>=3.14.1",
    "bitsandbytes>=0.49.2",
    "ir-measures>=0.4.3",
    "loguru>=0.7.3",
    "numpy>=2.5.1",
    "pydantic-settings>=2.14.2",
    "rich>=15.0.0",
    "sentence-transformers>=5.6.0",
]
