[project]
name = "dota2-reviews-search"
version = "0.1.0"
description = "DLS Project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.14.1",
    "fastapi>=0.111.0",
    "loguru>=0.7.3",
    "numpy>=2.5.1",
    "psutil>=5.9.8",
    "pydantic>=2.7.4",
    "pydantic-settings>=2.14.2",
    "qdrant-client>=1.10.1",
    "rich>=15.0.0",
    "sentence-transformers>=5.6.0",
    "uvicorn[standard]>=0.30.1",
]
